# my-notes-cli

./: LICENSE  Pipfile  README.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
src/mynotes/cli/: main.py  sample.py
tests/: run-unit-tests.sh
tests/unit/mynotes/cli/: test_sample.py
