[metadata]
name = my-notes-cli
version = 0.0.1
author = Mario Scalas
author_email = mario.scalas@gmail.com
description = A CLI for My Notes 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scalasm/my-notes-cli
project_urls =
    Bug Tracker = https://github.com/scalasm/my-notes-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src